--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,22 @@
 <div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
+  <h1>Welcome to Flashcard Failure</h1>
 
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
-</div>
+  <h3>Signup Today</h3>
+  <form action="/users/sign_up" method="post">
+  <input type="text" name="user[username]" placeholder="username">
+  <input type="text" name="user[email]" placeholder="email">
+  <input type="password" name="user[password]" placeholder="password">
+  <input type="submit" value="Sign up">
+</form>
+<br>
+<br>
+
+
+<h4>Already a user? Sign in here</h4>
+<form action="/users/login" method="post">
+  <input type="text" name="user[email]" placeholder="email">
+  <input type="password" name="user[password]" placeholder="password">
+  <input type="submit" value="Log in">
+</form>
+
+
